5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1712_2504.log
== TEST (2019-05-13 13:22:49) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pa=pmdv/100
pb=pmdl/100
cont=0
while(qic < qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- ERROR:
File "XXXX", line 9
    while (num % 2 = 0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:22:50) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pa=pmdv/100
pb=pmdl/100
cont=0
while(qic < qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.119559
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:24:16) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pa=pmdv/100
pb=pmdl/100
cont=0
while(qic / qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:24:17) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pa=pmdv/100
pb=pmdl/100
cont=0
while(qic / qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.174716
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
162
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
155
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:24:19) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pa=pmdv/100
pb=pmdl/100
cont=0
while(qic / qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.144329
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
162
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
155
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
172
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:24:52) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pa=pmdv/100
pb=pmdl/100
cont=0
while((qic / qil))<=2:
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.183192
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:24:54) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pa=pmdv/100
pb=pmdl/100
cont=0
while((qic / qil))<=2:
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:25:36) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil))<=2:
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:25:37) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil))<=2:
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.138357
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:25:38) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil))<=2:
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:30:05) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil))<=2:
	qil=qil*pmdv+qil
	qic=qic*pmdl+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:30:31) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdv+qil
	qic=qic*pmdl+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:30:32) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdv+qil
	qic=qic*pmdl+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.151956
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:30:33) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do vírus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucócitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdv+qil
	qic=qic*pmdl+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:32:32) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do virus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdv+qil
	qic=qic*pmdl+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:32:34) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do virus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdv+qil
	qic=qic*pmdl+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.210947
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:32:34) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do virus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdv+qil
	qic=qic*pmdl+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:32:43) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do virus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:32:44) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do virus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.196355
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:32:45) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do virus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while((qic / qil)<=2):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:33:11) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do virus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.11965
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
8
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:33:12) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicação diaria do virus: "))
pmdl = float(input("Percentual de multiplicação diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:33:46) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:34:01) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:34:56) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdv+qil
	qic=qic*pmdl+qic
	cont+=1
print(cont)
-- OUTPUT:
35408
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:35:12) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:35:26) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.129597
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
8
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:35:27) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:35:54) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont-=1
print(cont)
-- OUTPUT:
-8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:36:12) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=2
print(cont)
-- EXECUTION TIME:
0.193059
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
16
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
8
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:36:13) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=2
print(cont)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:36:29) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1.5
print(cont)
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:36:42) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1.2
print(cont)
-- EXECUTION TIME:
0.138252
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9.6
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4.8
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17.999999999999996
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:36:43) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1.2
print(cont)
-- OUTPUT:
9.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:36:54) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1.3
print(cont)
-- EXECUTION TIME:
0.149028
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
10.4
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5.2
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
19.500000000000004
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:36:55) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1.3
print(cont)
-- OUTPUT:
10.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:37:08) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1.36
print(cont)
-- OUTPUT:
10.879999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:37:24) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1.38
print(cont)
-- OUTPUT:
11.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:37:33) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic>qil):
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1.39
print(cont)
-- EXECUTION TIME:
0.133118
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
11.120000000000001
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5.56
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
20.850000000000005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:38:15) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic/qil)<=2:
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.183151
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:38:17) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qic/qil)<=2:
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- OUTPUT:
11.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:38:48) 
-- CODE:
qic = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia: "))
qil = int(input("Quantidade inicial de leucocitos no sangue: "))
pmdv = float(input("Percentual de multiplicacao diaria do virus: "))
pmdl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))
pmdv=pmdv/100
pmdl=pmdl/100
cont=0
while(qil/qic)<=2:
	qil=qil*pmdl+qil
	qic=qic*pmdv+qic
	cont+=1
print(cont)
-- EXECUTION TIME:
0.158337
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
